# tap-healthchecksio

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tox.ini
.github/: renovate.json5
.github/workflows/: build.yaml  build.yml  test.yaml  test.yml
tap_healthchecksio/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: test_core.py
