[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.29",
]

[project]
name = "tap-healthchecksio"
description = "Singer tap for Healthchecks.io, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Healthchecks.io",
  "singer.io",
]
license = "Apache-2.0"
maintainers = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
authors = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "singer-sdk~=0.54.0a4",
]
urls.Documentation = "https://github.com/reservoir-data/tap-healthchecksio#readme"
urls.Homepage = "https://github.com/reservoir-data/tap-healthchecksio"
urls.Repository = "https://github.com/reservoir-data/tap-healthchecksio"
scripts."tap-healthchecksio" = "tap_healthchecksio.tap:TapHealthchecksIO.cli"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest>=9",
  "singer-sdk[testing]",
]
typing = [
  "mypy~=1.19.0",
  "ty>=0.0.8",
  "types-requests~=2.32",
  { include-group = "testing" },
]

[tool.hatch]
version.source = "vcs"

[tool.uv]
required-version = ">=0.9.17"
prerelease = "allow"
preview = true

[tool.ruff]
line-length = 88
lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
  "PD",     # pandas-vet
]
lint.per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
lint.unfixable = [
  "ERA001", # commented-out-code
]
lint.flake8-annotations.allow-star-arg-any = true
lint.isort.known-first-party = [
  "tap_healthchecksio",
]
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"

[tool.deptry]
package_module_name_map.mypy = "mypy"
package_module_name_map.pytest = "pytest"
package_module_name_map.tap-healthchecksio = "tap_healthchecksio"
package_module_name_map.types-requests = "requests"
per_rule_ignores.DEP002 = [
  "deptry",
  "mypy",
  "pytest",
]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest]
addopts = [
  "-vvv",
  "--durations=10",
  "-ra",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [ "error" ]
log_level = "INFO"
minversion = "9"
testpaths = [ "tests" ]
xfail_strict = true

[tool.tox]
min_version = "4.32"
env_list = [
  "dependencies",
  "typing",
  "3.14",
  "3.13",
  "3.12",
]
env.dependencies.dependency_groups = [ "testing" ]
env.dependencies.commands = [ [ "deptry", "." ] ]
env.typing.dependency_groups = [ "testing", "typing" ]
env.typing.commands = [
  [
    "mypy",
    { replace = "posargs", default = [
      "tap_healthchecksio",
      "tests",
    ], extend = true },
  ],
  [
    "ty",
    "check",
    { replace = "posargs", default = [
      "tap_healthchecksio",
      "tests",
    ], extend = true },
  ],
]
env_run_base.runner = "uv-venv-lock-runner"
env_run_base.pass_env = [ "TAP_HEALTHCHECKSIO_*" ]
env_run_base.dependency_groups = [ "testing" ]
env_run_base.commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.mypy]
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
